--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
     "node-schedule": "^1.3.0",
     "node-vk-bot-api": "^1.2.0",
     "node-vkapi": "^3.0.7"
+  },
+  "engines": {
+    "node": "8.9.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chlenc/vk_bot.git"
   }
 }
