--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-vkapi": "^3.0.7"
   },
   "engines": {
-    "node": "8.9.3"
+    "node": "8.9.3",
+    "npm": "5.6.x"
   },
   "repository": {
     "type": "git",
