--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node-schedule": "^1.3.0",
     "node-vk-bot-api": "^1.2.0",
     "node-vkapi": "^3.0.7",
-    "sourcebuster": "^1.1.0"
+    "request": "^2.88.0",
+    "sourcebuster": "^1.1.0",
+    "utf8": "^3.0.0"
   },
   "engines": {
     "node": "8.9.3",
