--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "botact": "^2.3.9",
     "express": "^4.16.3",
     "firebase": "^4.13.1",
+    "memory-cache": "^0.2.0",
     "node-schedule": "^1.3.0",
     "node-vk-bot-api": "^1.2.0",
     "node-vkapi": "^3.0.7",
+    "nodemon": "^1.18.4",
     "request": "^2.88.0",
     "sourcebuster": "^1.1.0",
     "utf8": "^3.0.0"
